# reactive-video-playlist

./: .gitignore  main.py  pom.xml  pyproject.toml  schema.avro
src/main/avro/: playlist.avsc
src/main/java/playlist/: App.java
src/test/java/playlist/: AppTest.java
